# aipi-v2

./: .gitignore  .gitmodules  LICENSE  README.md  projet_script.sh
.github/workflows/: build.yml
aipi-palchatv2_board/: CMakeLists.txt  axk_board.c  axk_board.h  bl616_psram_doubao.ld  board.c  board.h  board_flash_psram.c  board_flash_psram.h  board_gpio.c  board_gpio.h  board_rf.c  board_rf.h  fw_header.c  fw_header.h
aipi-palchatv2_board/Doubao_config_8M/: partition_8M_doubao.toml
aipi-palchatv2_board/XiaozhiAI_config_8M/: partition_8M_xiaozhiAI.toml  partition_cfg_8M_XiaozhiAI.toml
aipi-palchatv2_board/config_8M/: bl_factory_params_IoTKitA_auto.dts
doubao/: CMakeLists.txt  Makefile  app_main.c  lwipopts_user.h  mbedtls_sample_config.h  proj.conf
doubao/lib/: CMakeLists.txt
doubao/lib/VolcEngineRTCHal/: CMakeLists.txt
doubao/lib/VolcEngineRTCLite/: CMakeLists.txt
doubao/lib/axk_app/: CMakeLists.txt  media_6824.c  stoge.c  vb6824.h  volc_user.c
doubao/lib/axk_ota/: http_ota.h
doubao/lib/blufi/: blufi.h  blufi_int.h
doubao/lib/opus/: CMakeLists.txt
doubao/lib/opus/src/silk/: debug.h
doubao/lib/syn_user_info/: CMakeLists.txt
doubao/lib/zlib/: CMakeLists.txt
doubao/lvgl/: CMakeLists.txt  lcd_display.h  lvgl8_conf_user.h
doubao/lvgl/lvgl_costom/: CMakeLists.txt  lcd_conf_user.h  lcd_display.c  lcd_display.h
doubao/lvgl/lvgl_def/: lcd_display.c  lcd_display.h
doubao/opus/src/src/: opus_encoder.c
guiguider_pre/v1.9.0/def/: pro_6.guiguider
guiguider_pre/v1.9.0/def/lvgl-simulator/: lv_conf.h
guiguider_pre/v1.9.0/def/temp/: board.h
project/Doubao/: Makefile  flash_prog_cfg.ini  proj.conf
project/Doubao/lib/: CMakeLists.txt
project/Doubao/lib/axk_app/: CMakeLists.txt  axk_ringbuff.c  axk_ringbuff.h  axk_server.h  main.c  media.h  stoge.h  tone.h  volc.h
project/Doubao/lib/axk_ota/: CMakeLists.txt  ai_ota.h  ota_parse.h
project/Doubao/lib/blufi/: CMakeLists.txt
project/Doubao/lib/libogg/: CMakeLists.txt  framing.c
project/Xiaozhi-AI/: CMakeLists.txt  Makefile  app_main.c  flash_prog_cfg.ini  mbedtls_sample_config.h  proj.conf  xiaozhi_api.c  xiaozhi_api.h
project/Xiaozhi-AI/Storage/: CMakeLists.txt  stoge.c
project/Xiaozhi-AI/include/: HmacSHA256.h  ai_ota.h  blufi.h  common.h  fs.h  http_request.h  media.h  stoge.h  tone.h  uart_ota.h  vb6824.h  vb6824_http_update.h  websocket_client.h  ws_demo.h  xiaozhi_api.h  xiaozhi_project_cfg.h
project/Xiaozhi-AI/lib/: CMakeLists.txt
project/Xiaozhi-AI/lvgl/: CMakeLists.txt  lcd_display.c  lcd_display.h  lvgl8_conf_user.h
voice_tools/: README.md  mp3_to_opus.py  tone.h
voice_tools/default_mp3/: tone.h
voice_tools/东北表姐/: tone.h
(+3 files in other folders)
